# xiuxian-tg-bot

./: .gitignore  README.md  config.py  database.py  fetch.py  pyproject.toml  xiuxian_game.db
bot/: bot.py  bot_new.py  weapon_enhancement.py  weapon_shop.py  xianxia_game.py
models/: player_data.py  weapon_data.py
